# bitbox

./: .gitignore  Cargo.toml  Makefile  README.md  README.zh-CN.md  build.rs.bak
.github/workflows/: action.yml
bitbox/: Cargo.toml
bitbox/src/: main.rs  version.rs
bitbox/src/address/: data.rs  mod.rs
bitbox/src/btc/: mod.rs
bitbox/src/config/: conf.rs  data.rs  mod.rs
bitbox/src/db/: account.rs  activity.rs  address_book.rs  mod.rs
bitbox/src/logic/: about.rs  account.rs  activity.rs  address_book.rs  btcinfo.rs  message.rs  mod.rs  ok_cancel_dialog.rs  password_dialog.rs  send_tx.rs  setting.rs  util.rs  window.rs
bitbox/src/util/: crypto.rs  fs.rs  http.rs  mod.rs  number.rs  translator.rs
bitbox/src/wallet/: mod.rs
bitbox/src/wallet/account/: address.rs  data.rs  mod.rs  sendinfo.rs  transaction.rs  tx.rs
bitbox/src/wallet/address/: data.rs  mod.rs
bitbox/src/wallet/transaction/: blockstream.rs  data.rs  mod.rs
bitbox/ui/: appwindow.slint  logic.slint  store.slint  theme.slint  translator.slint  util.slint
bitbox/ui/dialog/: address-book-add-item.slint  address-book.slint  change-password.slint  new-account.slint  password.slint  tx-detail.slint
bitbox/ui/dialog/setting/: account.slint  chat.slint  dialog.slint  ui.slint
bitbox/ui/leftPanel/: body.slint  func.slint  header.slint  panel.slint
bitbox/ui/panel/: body.slint  footer.slint  header.slint  panel.slint
bitbox/ui/panel/bodyer/: balance.slint  panel.slint
bitbox/ui/panel/bodyer/tool/: activity.slint  address-book.slint  panel.slint  receive.slint  send.slint
bitbox/ui/rightPanel/: footer.slint  panel.slint
bitbox/ui/rightPanel/body/: bfile.slint  bimage.slint  bitem.slint  panel.slint  timestamp.slint  ufile.slint  uimage.slint  uitem.slint
script/: bitcoin-price.json  fee-estimates.json  get-bitcoin-history.sh  get-bitcoin-price.sh  get-fee-estimates.sh  get-utxo.sh  history.json  utxo.json
testdata/: wallet-addr.csv
win/: version.h
