[package]
name = "bitbox"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
clipboard = "0.5"
hex = "0.4"

bitcoin = { version = "0.31", features = ["rand-std", "serde"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = {version = "1.17", features = ["full"]}
serde = {version = "1.0", feature = ["derive"]}
