[package]
name = "bitbox"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
log = "0.4"
rand = "0.8"
rand_core = "0.6"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.4"
clipboard = "0.5"
platform-dirs = "0.3"
serde = "1.0"
crypto-hash = "0.3"
aes = "0.7"
block-modes="0.8"

bip32 = { version = "0.5", features = ["std", "bip39" , "mnemonic"] }
bitcoin = { version = "0.31", features = ["rand-std", "serde", "bitcoinconsensus" ] }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = {version = "1.17", features = ["full"]}
uuid = { version = "1.3", features = ["v4"] }
