[package]
name = "bitbox"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "=0.4.3"
log = "=0.4.20"
rand = "=0.8.5"
rand_core = "=0.6.4"
env_logger = "=0.10.1"
chrono = "=0.4.31"
anyhow = "=1.0.76"
serde = "=1.0.193"
serde_json = "=1.0.108"
serde_derive = "=1.0.193"
lazy_static = "=1.4.0"
clipboard = "=0.5.0"
platform-dirs = "=0.3.0"
crypto-hash = "=0.3.4"
aes = "=0.7.0"
block-modes="=0.8.0"

bip32 = { version = "=0.5.1", features = ["std", "bip39" , "mnemonic"] }
bitcoin = { version = "=0.31.0", features = ["rand-std", "serde", "bitcoinconsensus" ] }
reqwest = { version = "=0.11.23", features = ["json", "socks"] }
tokio = {version = "=1.35.1", features = ["full"]}
sqlx = { version = "=0.7.3", features = ["runtime-tokio", "sqlite"] }
uuid = { version = "=1.6.1", features = ["v4"] }
slint = { version = "1.3.2", features = ["log"] }

[build-dependencies]
slint-build = "=1.3.2"
cmd_lib = "=1.9.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "=2.4.0"

